--- a/k8s/api-bank/templates/ingress.yaml
+++ b/k8s/api-bank/templates/ingress.yaml
@@ -1,10 +1,10 @@
 {{ if .Values.ingress.enabled}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
-metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | trimSuffix "-" }}
-  name: {{ $fullname }}-ingress
+metadata: 
+  name: {{ include "apibank.fullname" . }}-ingress
   labels:
-    name: {{ $fullname }}-ingress
+    name: {{ include "apibank.fullname" . }}-ingress
 spec:
   ingressClassName: nginx
   rules:
@@ -15,7 +15,7 @@ spec:
         path: "/"
         backend:
           service:
-            name: {{ $fullname }}-service
+            name: {{ include "apibank.fullname" . }}-service
             port: 
               number: {{ .Values.service.port | default 80 | int}}
 {{ end }}
