--- a/k8s/api-bank/templates/service.yaml
+++ b/k8s/api-bank/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
-metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | trimSuffix "-" }}
-  name: {{ $fullname }}-service
+metadata: 
+  name: {{ include "apibank.fullname" . }}-service
   labels:
     chart: "{{ .Release.Name }}-{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
   selector:
-    app: {{ $fullname }}
+    app: {{ include "apibank.fullname" . }}
   ports:
   - port: {{ .Values.service.port }}
     targetPort: {{ .Values.pod.port }}
