--- a/k8s/star.accounts.values.yaml
+++ b/k8s/star.accounts.values.yaml
@@ -1,3 +1,4 @@
+fullname: "star-accounts"
 replicaCount: 1
 image: leandroalves86/star.accounts
 
@@ -29,7 +30,7 @@ kafka:
 
 bacen:
   enabled: true
-  url: "http://bacen-api-bank-service.default.svc.cluster.local"
+  url: "http://bacen-service.default.svc.cluster.local"
 
 ingress:
   host: star.accounts.leandroalves.dev.br
