--- a/k8s/star.claims.values.yaml
+++ b/k8s/star.claims.values.yaml
@@ -1,3 +1,4 @@
+fullname: "star-claims"
 replicaCount: 1
 image: leandroalves86/star.claims
 
@@ -36,7 +37,7 @@ kafka:
 
 bacen:
   enabled: true
-  url: "http://bacen-api-bank-service.default.svc.cluster.local"
+  url: "http://bacen-service.default.svc.cluster.local"
 
 ingress:
   host: star.claims.leandroalves.dev.br
