--- a/k8s/vulture.values.yaml
+++ b/k8s/vulture.values.yaml
@@ -1,3 +1,4 @@
+fullname: "vulture"
 replicaCount: 1
 image: leandroalves86/vulture
 
@@ -40,7 +41,7 @@ kafka:
 
 bacen:
   enabled: true
-  url: "http://bacen-api-bank-service.default.svc.cluster.local"
+  url: "http://bacen-service.default.svc.cluster.local"
 
 ingress:
   host: vulture.leandroalves.dev.br
