[k8s] add load generator

--- a/k8s/nginx/webserver/templates/deployment.yaml
+++ b/k8s/nginx/webserver/templates/deployment.yaml
@@ -10,6 +10,7 @@ spec:
     metadata:
       labels:
         app: {{ include "webserver.fullname" . }}
+        type: webserver
     spec:
       containers:
       - name: {{ include "webserver.fullname" . }}
