--- a/k8s/nginx/webserver/templates/deployment.yaml
+++ b/k8s/nginx/webserver/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "webserver.fullname" . }}-deployment
 spec:
+  replicas: {{ .Values.autoscaling.minReplicas }}
   selector:
     matchLabels:
       app: {{ include "webserver.fullname" . }}
