--- a/k8s/nginx/webserver/values.yaml
+++ b/k8s/nginx/webserver/values.yaml
@@ -1,5 +1,3 @@
-replicaCount: 1
-
 image:
   repository: nginx
   pullPolicy: IfNotPresent
@@ -27,5 +25,7 @@ resources:
 autoscaling:
   minReplicas: 1
   maxReplicas: 10
-  targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
+  cpuUtilization: 80
+  memoryUtilization: 80
+  stabilizationWindowSeconds: 300
+  policiesPeriodSeconds: 15
