--- a/k8s/nginx/nginx.blue.yaml
+++ b/k8s/nginx/nginx.blue.yaml
@@ -6,3 +6,12 @@ fullname: "nginx-blue"
 
 ingress:
   host: "blue.leandroalves.dev.br"
+
+resources:
+  requests:
+    cpu: 5m
+    memory: 7Mi
+
+autoscaling:
+  stabilizationWindowSeconds: 15
+  policiesPeriodSeconds: 5
